--- a/LawSuits/Views/Person/Index.cshtml
+++ b/LawSuits/Views/Person/Index.cshtml
@@ -10,14 +10,15 @@
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
             <th scope="col">Personal Id</th>
-            <th scope="col">Company Name</th>
-            <th scope="col">Company Id</th>
-            <th scope="col">City</th>
+            @* <th scope="col">Company Name</th> *@
+            @* <th scope="col">Company Id</th> *@
+            @* <th scope="col">City</th> *@
             <th scope="col">Type</th>
         </tr>
     </thead>
     <tbody>
         <tr>
+            <td></td>
             <td></td>
             <td><input type="text"/></td>
             <td>
@@ -36,12 +37,16 @@
                 <td>@item.FirstName</td>
                 <td>@item.LastName</td>
                 <td>@item.PersonalId</td>
-                <td>@item.CompanyName</td>
-                <td>@item.CompanyId</td>
+                @* <td>@item.CompanyName</td> *@
+                @* <td>@item.CompanyId</td> *@
                 @* <td>@item.PhoneNumber</td> *@
-                <td>@item.City</td>
+                @* <td>@item.City</td> *@
                 <td>@item.Type</td>
-                <td><button>View Detail</button><button>Edit</button><button>Delete</button></td>
+                <td>
+                    <button><a asp-action="Detail">View Detail</a></button>
+                    <button><a asp-action="Edit">Edit</a></button>
+                    <button><a asp-action="Delete">Delete</a></button>
+                </td>
             </tr>
         }
     </tbody>
