--- a/LawSuits/Views/Person/Index.cshtml
+++ b/LawSuits/Views/Person/Index.cshtml
@@ -23,10 +23,9 @@
             <td><input type="text"/></td>
             <td>
                 <select>
-                    <option>System Administrator</option>
-                    <option>Judge</option>
-                    <option>Admin</option>
-                    <option>User</option>
+                    <option value="0">All</option>
+                    <option value="9">Private</option>
+                    <option value="10">Legal</option>
                 </select>
             </td>
             <td><button>Search</button></td>
