--- a/LawSuits/Views/Person/Create.cshtml
+++ b/LawSuits/Views/Person/Create.cshtml
@@ -62,6 +62,41 @@
             </div>
 
         </div>
+        <div class="col-12">
+            <div class="row phones">
+                <div class="template">
+                    <div class="p-2 mb-5 phone-block">
+                        <div>
+                            <button type="button" class="btn btn-danger remove-att">
+                                Remove
+                            </button>
+                        </div>
+                        <div class="form-group">
+                            <label for="Person_Numbers_0__TypeId">Number Type</label>
+                            <select class="form-control" data-val="true"
+                                data-val-required="The TypeId field is required." id="Person_Numbers_0__TypeId"
+                                name="Person.Numbers[0].TypeId" asp-items="Model.Components.PhoneTypes"> </select>
+                            <span class="text-danger field-validation-valid" data-valmsg-for="Person.Numbers[0].TypeId"
+                                data-valmsg-replace="true"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="Person_Numbers_0__Number">Phone Number</label>
+                            <input class="form-control" type="text" id="Person_Numbers_0__Number"
+                                name="Person.Numbers[0].Number" value="">
+                            <span class="text-danger field-validation-valid" data-valmsg-for="Person.Numbers[0].Number"
+                                data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="add-phone m-3">
+                <button type="button" class="btn btn-info" id="add_phone">
+                    Add Phone Number
+                </button>
+            </div>
+        </div>
+
         <div class="col-6">
             <div class="form-group">
                 <button type="submit" class="btn btn-success">Create</button>
@@ -72,3 +107,50 @@
     </form>
 </div>
 
+
+@section Scripts
+{
+<script>
+    var phonesTemplate = $(".phones").find(".template").html();
+    $(".phones").find(".template").remove();
+    var phoneIndex = 0;
+
+    $("#add_phone").on("click", function() {
+
+        $(phonesTemplate).find(".form-group").each(function() {
+
+            var select = $(this).find("select");
+            var input = $(this).find("input");
+            var name = "";
+
+            if (select.length > 0) {
+                name = $(select).attr("name")
+            } else {
+                name = $(input).attr("name")
+            }
+            var ind = name.lastIndexOf('[');
+            var index = name.substr(ind + 1, 1);
+
+            if(phoneIndex == 0 && index != 0) {
+                phoneIndex = parseInt(index);
+            }
+
+            fname = name.substr(0, ind);
+            var newName = "[" + phoneIndex + "]";
+            var newId = "_" + phoneIndex + "__";
+            var regex = new RegExp("_" + index + "__", "gi");
+            phonesTemplate = phonesTemplate.replace(regex, newId);
+            phonesTemplate = phonesTemplate.replace("[" + index + "]", newName);
+            phonesTemplate = phonesTemplate.replace("[" + index + "]", newName);
+
+        });
+        phoneIndex += 1;
+
+        $(".phones").append(phonesTemplate);
+    });
+
+    $(document).on('click', ".remove-att", function() {
+        $(this).closest(".phone-block").remove();
+    })
+</script>
+}
