--- a/LawSuits/Views/Person/Index.cshtml
+++ b/LawSuits/Views/Person/Index.cshtml
@@ -43,7 +43,7 @@
                 <td>@item.Type</td>
                 <td>
                     <button><a asp-action="Detail">View Detail</a></button>
-                    <button><a asp-action="Edit">Edit</a></button>
+                    <button><a asp-controller="Person" asp-action="Update" asp-route-id="@item.Id">Edit</a></button>
                     <button><a asp-action="Delete">Delete</a></button>
                 </td>
             </tr>
