--- a/LawSuits/Views/Person/Update.cshtml
+++ b/LawSuits/Views/Person/Update.cshtml
@@ -1,20 +1,30 @@
-﻿@model PersonCUVM
+@model PersonCUVM
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Update";
 }
 
-<h1>Create a new Person</h1>
+<h1>Update a Person data</h1>
 <hr />
 <div>
-    <form asp-action="Create">
+    @if (ViewBag.Message != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            @ViewBag.Message
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
+    <form asp-action="Update">
         <div asp-validation-summary="ModelOnly" class="text-danger">
         </div>
+        <input asp-for="Person.Id" type="hidden"/>
 
         <partial name="~/Views/Person/Helper/PersonCUViewForm.cshtml" model="Model"/>
 
         <div class="col-6">
             <div class="form-group">
-                <button type="submit" class="btn btn-success">Create</button>
+                <button type="submit" class="btn btn-success">Update</button>
                 <a asp-action="Index">Go back</a>
             </div>
         </div>
