--- a/LawSuits/Views/Shared/_Layout.cshtml
+++ b/LawSuits/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Persons</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                        </li>
                     </ul>
                 </div>
             </div>
