--- a/LawSuits/Views/Person/Index.cshtml
+++ b/LawSuits/Views/Person/Index.cshtml
@@ -42,9 +42,9 @@
                 @* <td>@item.City</td> *@
                 <td>@item.Type</td>
                 <td>
-                    <button><a asp-action="Detail">View Detail</a></button>
+                    <button><a asp-action="Detail" asp-route-id="@item.Id" asp-controller="Person" >View Detail</a></button>
                     <button><a asp-controller="Person" asp-action="Update" asp-route-id="@item.Id">Edit</a></button>
-                    <button><a asp-action="Delete">Delete</a></button>
+                    <button><a asp-action="Delete" asp-controller="Person" asp-route-id="@item.Id">Delete</a></button>
                 </td>
             </tr>
         }
