--- a/LawSuits/Views/Person/Index.cshtml
+++ b/LawSuits/Views/Person/Index.cshtml
@@ -20,15 +20,17 @@
         <tr>
             <td></td>
             <td></td>
-            <td><input type="text"/></td>
-            <td>
-                <select>
-                    <option value="0">All</option>
-                    <option value="9">Private</option>
-                    <option value="10">Legal</option>
-                </select>
-            </td>
-            <td><button>Search</button></td>
+            <form asp-action="Index">
+                <td><input type="text" name="searchName" /></td>
+                <td>
+                    <select name="searchType">
+                        <option value="0">All</option>
+                        <option value="9">Private</option>
+                        <option value="10">Legal</option>
+                    </select>
+                </td>
+                <td><input type="submit" value="serach"></td>
+            </form>
         </tr>
         @foreach (var item in Model.People)
         {
@@ -42,7 +44,7 @@
                 @* <td>@item.City</td> *@
                 <td>@item.Type</td>
                 <td>
-                    <button><a asp-action="Detail" asp-route-id="@item.Id" asp-controller="Person" >View Detail</a></button>
+                    <button><a asp-action="Detail" asp-route-id="@item.Id" asp-controller="Person">View Detail</a></button>
                     <button><a asp-controller="Person" asp-action="Update" asp-route-id="@item.Id">Edit</a></button>
                     <button><a asp-action="Delete" asp-controller="Person" asp-route-id="@item.Id">Delete</a></button>
                 </td>
